# coolify-monitor

./: .gitignore  README.md  package-lock.json  package.json  roadmap.md
.github/workflows/: github-releases-to-discord.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-notifications.toml  allow-secrets.toml
src-tauri/src/: lib.rs  notifications.rs  secrets.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/dashboard/: overview-stats.tsx  projects-view.tsx  resource-table.tsx  resource-table.types.ts  status-badge.tsx
src/components/layout/: app-shell.tsx  app-sidebar.tsx  command-palette.tsx  command-palette.types.ts  instance-switcher.tsx  refresh-status.tsx  setup-splash.tsx  window-drag-region.tsx
src/components/notifications/: notification-permission-gate.tsx  notification-permission-screen.tsx  status-notification-watcher.tsx
src/components/providers/: app-providers.tsx  theme-provider.tsx
src/components/settings/: app-update-settings.tsx  connection-settings.tsx  notification-settings.tsx  settings-error-boundary.tsx
src/components/ui/: external-link.tsx
src/components/updater/: sidebar-update-prompt.tsx  update-prompt-dialog.tsx
src/hooks/: use-all-instances-overview.ts  use-app-context.tsx  use-app-updater.tsx  use-coolify.ts  use-notification-permission.ts  use-relative-time.ts
src/lib/: external-link.ts
src/lib/coolify/: client.ts  constants.ts  normalize-resources.ts  normalize-resources.types.ts  parse-response.ts  parse-response.types.ts  projects.ts  resource-rows.ts  resource-table-utils.ts  status.ts  types.ts  urls.ts  (+1 more)
(+10 files in other folders)
