[package]
name = "app"
version = "0.1.3"
description = "Coolify Monitor - Desktop deployment health dashboard"
authors = ["you"]
license = ""
repository = "https://github.com/orafal-dev/coolify-monitor"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
keyring = { version = "3.6", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
